--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/MAP_Main.MAP_Main
 EditorStartupMap=/Game/Maps/MAP_Main.MAP_Main
+GlobalDefaultGameMode=/Game/Blueprints/GM_Demo01.GM_Demo01_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
