--- a/demo_01.uproject
+++ b/demo_01.uproject
@@ -7,7 +7,11 @@
 		{
 			"Name": "demo_01",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Paper2D",
+				"Engine"
+			]
 		}
 	],
 	"Plugins": [
